<resources>
    <string name="app_name">Gestor Eventos Airsoft</string>
    <string name="eventos">Eventos</string>
    <string name="jogadores">Jogadores</string>
    <string name="armas">Armas</string>
    <string name="title_activity_jogador">Jogador</string>
    <string name="criar_jogador">Criar Jogador</string>
    <string name="ver_jogador">Ver Jogador</string>
    <string name="title_activity_criar_jogador">Criar Jogador</string>
    <string name="nome">Nome</string>
    <string name="contacto">Contacto</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="grupo_sanguineo">Grupo Sanguineo</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_requerido">Introduza um nome</string>
    <string name="contacto_requerido">Introduza um contacto</string>
    <string name="data_requerida">Insira a data de nascimento</string>
    <string name="grupo_sanguineo_requerido">Insira o seu grupo sanguineo</string>
    <string name="numsocio_requerido">Insira o numero de associado</string>
    <string name="numero_de_socio">Numero de Socio</string>
    <string name="mensagem_evento">Vai para a pagina de Eventos</string>
    <string name="mensagem_armas">Vai para a pagina de Armas</string>
    <string name="ver_jogadores">Vai para a pagina para visualizar os jogadores existentes</string>
    <string name="dados_guardados">Dados guardados com sucesso</string>
    <string name="editar_jogador">Editar Jogador</string>
    <string name="title_activity_editar_jogador">Editar Jogador</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_eliminar_jogador">Eliminar Jogador</string>
    <string name="apagar">Apagar</string>
</resources>
