<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EliminarJogador"
    tools:showIn="@layout/activity_eliminar_jogador">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto" />

    <TextView
        android:id="@+id/textViewContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contacto"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_nascimento" />

    <TextView
        android:id="@+id/textViewDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/data_nascimento"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grupo_sanguineo" />

    <TextView
        android:id="@+id/textViewGrupoSanguineo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/grupo_sanguineo"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_socio" />

    <TextView
        android:id="@+id/textViewNumSocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero_de_socio"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:onClick="CancelarJogador"
        android:text="@string/cancelar" />

    <Button
        android:id="@+id/buttonApagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:onClick="Apagar"
        android:text="@string/apagar" />
</LinearLayout>