<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/Eventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:onClick="mostraMensagemEventos"
        android:text="@string/eventos" />

    <Button
        android:id="@+id/Jogadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:onClick="mostraMensagemJogador"
        android:text="@string/jogadores" />

    <Button
        android:id="@+id/Armas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        android:onClick="mostraMensagemArmas"
        android:text="@string/armas" />
</LinearLayout>